Description fix, resume sizing againnnn

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#1555aa" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Dabian Garnica's portfolio. A place to showcase my work and share my thoughts."
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
